# TestSystemForCompetitiveProgramming

./: CMakeLists.txt  main.cpp  solution.hpp  solution_impl.cpp  solution_impl.hpp
tests/: test_1.cc  test_2.cc  test_3.cc
